# dotfiles

./: ..zshrc.un~  .Brewfile  .README.md.swp  .aspell.en.prepl  .aspell.en.pws  .bashrc  .dotfilesLink.sh.swp  .gitconfig  .gitignore  .gitmodules  .golangci.yaml  .latexmkrc  .pip3requirements  .piprequirements  .profile  .pypirc  .requirements.txt  .textlintrc  .textlintrc.json  .textlintrc.yaml  .tool-versions  .vale.ini  .vimrc  .vimrc.swp  .zshenv  .zshrc  .zshrc.antigen  0_init.sh  Brewfile  README.md  \  com.googlecode.iterm2.plist  dotfilesLink.sh  foo  init.sh  mise.toml  selene.toml
.config/: .isort.cfg  dot_zsh  fish  fisher  flake8  init.vim  mypy.ini  nvim
.config/aspell/: en.prepl  en.pws
.config/coc/: history.json  memos.json  mru
.config/configstore/: update-notifier-npm.json
.config/dot_zsh/: .gitmodules  .zshrc_exter  .zshrc_linux  .zshrc_mac  .zshrc_mics  .zshrc_prompt
.config/fish/: aliases.fish  config.fish  env.fish  fish_variables  fishfile  flake8  keybinds.fish
.config/fontforge/: prefs
.config/git/: config
.config/mypy/: config
.config/nvim/: init.vim
.jupyter/: jupyter_notebook_config.json  migrated
.vim/: .viminfo  coc-settings.json  dein.toml  dein_colors.toml  dein_file.toml  dein_lazy.toml  dein_unite.toml
.vim/neovim2/: pyproject.toml
.vim/neovim3/: pyproject.toml
brewfile/: .brewfile
config/: flake8  memos.json  starship.toml
dot_zsh/: .zcompdump  .zshrc  .zshrc_alikey
iTerm/: com.googlecode.iterm2.plist  com.googlecode.iterm2.plist_for_desctopPC
initialize/: coc.sh  pipx.sh
vim/: .vimrc
zsh/: .zshenv
(+3493 files in other folders)
