[tool.poetry]
name = "neovim3"
version = "0.1.0"
description = ""
authors = ["daisuke.oku <w.40141@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
neovim = "^0.3.1"
black = "^19.10b0"
isort = "^4.3.21"
mypy = "^0.770"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
